--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/sw.js').catch(console.error);
+      navigator.serviceWorker.register('sw.js').catch(console.error);
     });
   }
 </script>
