--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
     </details>
 
     <menu>
-      <button value="cancel" id="btnCancel">Cancelar</button>
-      <button id="btnSave" value="default">Guardar</button>
-    </menu>
+  <button type="button" id="btnCancel">Cancelar</button>
+  <button type="submit" id="btnSave">Guardar</button>
+</menu>
   </form>
 </dialog>
 
