--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <label class="field">
       <span>Importe (€)</span>
-      <input type="number" step="0.01" min="0" id="amount" required inputmode="decimal" placeholder="0,00">
+      <input type="text" id="amount" required inputmode="decimal" placeholder="0,00">
     </label>
 
     <label class="field">
