--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <label class="field">
       <span>Fecha</span>
-      <input type="date" id="date" required>
+      <input type="date" id="date" name="date" required>
     </label>
 
     <label class="field">
