--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
   <form method="dialog">
     <p id="confirmText">¿Seguro?</p>
     <menu>
-      <button value="cancel">No</button>
-      <button value="ok" class="danger">Sí</button>
-    </menu>
+  <button type="button" id="btnCancel">Cancelar</button>
+  <button type="submit" id="btnSave">Guardar</button>
+</menu>
   </form>
 </dialog>
 
