--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
   <form method="dialog">
     <p id="confirmText">¿Seguro?</p>
     <menu>
-  <button type="button" id="btnCancel">Cancelar</button>
-  <button type="submit" id="btnSave">Guardar</button>
-</menu>
+      <button type="button" value="cancel" id="btnNo">No</button>
+      <button type="submit" value="ok" class="danger" id="btnYes">Sí</button>
+    </menu>
   </form>
 </dialog>
 
