--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
   <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://www.googleapis.com" crossorigin>
-  <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script
+  <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
   <script defer src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>                                                            
   <script defer src="firebase.js"></script>
   <script defer src="app.js"></script>
