--- a/index.html
+++ b/index.html
@@ -11,57 +11,31 @@
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
   <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://www.googleapis.com" crossorigin>
-  <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
-  <script defer src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>                                                            
+
+  <!-- Scripts -->
+  <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
   <script defer src="firebase.js"></script>
   <script defer src="app.js"></script>
 </head>
-<dialog id="authDialog" class="sheet">
-  <form method="dialog" id="authForm">
-    <h3 id="authTitle">Iniciar sesión</h3>
-
-    <label class="field">
-      <span>Email</span>
-      <input type="email" id="authEmail" required autocomplete="email" inputmode="email" />
-    </label>
-
-    <label class="field">
-      <span>Contraseña</span>
-      <input type="password" id="authPassword" required autocomplete="current-password" />
-    </label>
-
-    <div class="sub" style="margin:6px 2px">
-      <button type="button" id="toggleMode" class="icon-btn">¿No tienes cuenta? Regístrate</button>
-    </div>
-
-    <menu>
-      <button type="button" id="authCancel">Cancelar</button>
-      <button type="submit" id="authSubmit">Entrar</button>
-    </menu>
-  </form>
-</dialog>
-<dialog id="dlgOcr" class="sheet">
-  <h3>Importar desde imágenes</h3>
-  <div id="ocrStatus" class="sub">Listo</div>
-  <div id="ocrPreview" style="max-height:40vh; overflow:auto; margin:8px 0;"></div>
-  <menu>
-    <button type="button" id="ocrCancel">Cancelar</button>
-    <button type="button" id="ocrImport" disabled>Importar seleccionados</button>
-  </menu>
-</dialog>
-
-<!-- Tesseract.js (OCR) -->
-<script defer src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script><body>
+<body>
 <header class="app-bar">
   <div class="title">Cashly</div>
   <div class="spacer"></div>
+
+  <!-- OCR -->
   <button id="btnOcr" class="icon-btn" title="Importar desde imagen">🖼️</button>
   <input type="file" id="ocrFiles" accept="image/*" multiple hidden>
-  <div class="spacer"></div>  
+
+  <div class="spacer"></div>
+
+  <!-- Export / Import -->
   <button id="btnExport" class="icon-btn" title="Exportar JSON">⤴︎</button>
   <label class="file-label" title="Importar JSON">
     ⤵︎ <input type="file" id="fileImport" accept="application/json" hidden>
   </label>
+
+  <!-- Logout -->
   <button id="btnLogout" class="icon-btn" title="Cerrar sesión">⎋</button>
 </header>
 
@@ -98,6 +72,40 @@
 
 <button id="fabAdd" class="fab" aria-label="Añadir">＋</button>
 
+<!-- Diálogo login -->
+<dialog id="authDialog" class="sheet">
+  <form method="dialog" id="authForm">
+    <h3 id="authTitle">Iniciar sesión</h3>
+    <label class="field">
+      <span>Email</span>
+      <input type="email" id="authEmail" required autocomplete="email" inputmode="email" />
+    </label>
+    <label class="field">
+      <span>Contraseña</span>
+      <input type="password" id="authPassword" required autocomplete="current-password" />
+    </label>
+    <div class="sub" style="margin:6px 2px">
+      <button type="button" id="toggleMode" class="icon-btn">¿No tienes cuenta? Regístrate</button>
+    </div>
+    <menu>
+      <button type="button" id="authCancel">Cancelar</button>
+      <button type="submit" id="authSubmit">Entrar</button>
+    </menu>
+  </form>
+</dialog>
+
+<!-- Diálogo OCR -->
+<dialog id="dlgOcr" class="sheet">
+  <h3>Importar desde imágenes</h3>
+  <div id="ocrStatus" class="sub">Listo</div>
+  <div id="ocrPreview" style="max-height:40vh; overflow:auto; margin:8px 0;"></div>
+  <menu>
+    <button type="button" id="ocrCancel">Cancelar</button>
+    <button type="button" id="ocrImport" disabled>Importar seleccionados</button>
+  </menu>
+</dialog>
+
+<!-- Diálogo nuevo/editar -->
 <dialog id="dlgTx" class="sheet">
   <form method="dialog" id="txForm">
     <h3 id="dlgTitle">Nuevo movimiento</h3>
@@ -109,9 +117,9 @@
     </div>
 
     <label class="field">
-  <span>Importe (€)</span>
-  <input type="text" id="amount" name="amount" required inputmode="decimal" placeholder="0,00">
-</label>
+      <span>Importe (€)</span>
+      <input type="text" id="amount" name="amount" required inputmode="decimal" placeholder="0,00">
+    </label>
 
     <label class="field">
       <span>Categoría</span>
@@ -145,12 +153,13 @@
     </details>
 
     <menu>
-  <button type="button" id="btnCancel">Cancelar</button>
-  <button type="submit" id="btnSave">Guardar</button>
-</menu>
+      <button type="button" id="btnCancel">Cancelar</button>
+      <button type="submit" id="btnSave">Guardar</button>
+    </menu>
   </form>
 </dialog>
 
+<!-- Confirmación -->
 <dialog id="dlgConfirm" class="sheet small">
   <form method="dialog">
     <p id="confirmText">¿Seguro?</p>
